# IME_Indicator

./: README.md
python_indicator/: config.py  main.py  requirements.txt
rust_indicator/: Cargo.toml
rust_indicator/assets/: about.txt
rust_indicator/src/: config.rs  main.rs
