[package]
name = "IME-Indicator"
version = "0.2.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Ime",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Shell",
] }

[build-dependencies]
embed-resource = "1.4"

[profile.release]
opt-level = 3
lto = true
